<resources>
    <string name="app_name">easEat</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="don_t_have_an_account_create_one_now">Don\'t have an account? Create one now</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now</string>
    <string name="register">Register</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_birthday_dd_mm_yyyy">Enter birthday dd-mm-yyyy</string>
    <string name="restaurants">Restaurants</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="googleApiKey">AIzaSyAEasI0H2_05n3GYEPq-ftHv9O65r7Yheg</string>
    <string name="this_restaurant_provides_service_in_your_area">This restaurant provides service in your area</string>
    <string name="this_restaurant_provides_service_in_your_area_no">This restaurant does not provides service in your area</string>
</resources>