<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/baseline_photo_library_24"
            android:layout_width="70dp"
            android:layout_marginVertical="4dp"
            android:id="@+id/ivProfile"
            android:layout_height="70dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:id="@+id/etAddressLayout"
            android:hint="@string/enter_address" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddress"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:id="@+id/etEmailLayout"

            android:hint="@string/enter_email_address" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="8dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            android:id="@+id/etPasswordLayout"
            android:hint="@string/enter_password" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:layout_marginTop="16dp"
            android:text="@string/register"/>

        <TextView
            android:layout_width="200dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:id="@+id/existingAccount"
            android:textAlignment="center"
            android:text="@string/already_have_an_account_login_now"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>